--- a/Code/happycamper.html
+++ b/Code/happycamper.html
@@ -7,6 +7,7 @@
 
     <script type="text/javascript" src="scripts/plugins/jquery-1.5.1.min.js"></script>
     <script type="text/javascript" src="scripts/plugins/jlinq.min.js"></script>
+    <script type="text/javascript" src="scripts/plugins/json2.js"></script>
     <script type="text/javascript" src="scripts/plugins/jquery.tmpl.min.js"></script>
     <script type="text/javascript" src="scripts/camper.js"></script>
     <script type="text/javascript" src="scripts/happycamper.js"></script>
