- Added users tab. - Added search tab. - Removed starred tab.

--- a/Code/happycamper.html
+++ b/Code/happycamper.html
@@ -74,8 +74,9 @@
     <div class="content main" style="display: none;">
         <ul class="tabs">
             <li class="chat selected">Chat</li>
-            <li class="starred">Starred</li>
-            <li class="files"><a href="">Files</a></li>
+            <li class="users">Users</li>
+            <li class="files">Files</li>
+            <li class="search">Search</li>
         </ul>
         <div class="tab-content chat">
             <div class="group">
