- Refactored save/load json and constants into separate file. - Added functionality to show uploaded files.

--- a/Code/background.html
+++ b/Code/background.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="scripts/plugins/date.format.js"></script>
     <script type="text/javascript" src="scripts/camper.js"></script>
     <script type="text/javascript" src="scripts/background.js"></script>
+    <script type="text/javascript" src="scripts/happycamper.util.js"></script>
 </head>
 <body>
 
