- Finished send message functionality.

--- a/Code/happycamper.html
+++ b/Code/happycamper.html
@@ -138,12 +138,8 @@
         </ul>
         <div class="tab-content chat">
             <div class="group">
-                <div class="conversation">
-                    
-                </div>
-                <div class="sidebar">
-                    
-                </div>
+                <div class="conversation"></div>
+                <div class="sidebar"></div>
                 <div class="clear"></div>
             </div>
             <div class="send">
