- Joining room functional.

--- a/Code/happycamper.html
+++ b/Code/happycamper.html
@@ -10,7 +10,6 @@
     <script type="text/javascript" src="scripts/plugins/json2.js"></script>
     <script type="text/javascript" src="scripts/plugins/jquery.tmpl.min.js"></script>
     <script type="text/javascript" src="scripts/plugins/date.format.js"></script>
-    <script type="text/javascript" src="scripts/camper.js"></script>
     <script type="text/javascript" src="scripts/happycamper.js"></script>
     <script type="text/javascript" src="scripts/happycamper.util.js"></script>
 
@@ -128,7 +127,7 @@
     </div>
 
     <div class="content join-room" style="display: none;">
-        <span>Click on a room from the list to join</span>
+        <span>Click on a room to join</span>
     </div>
 
     <div class="content joining" style="display: none;"></div>
