- Added notifications permission to manifest.json - Added mock of chat filters.

--- a/Code/happycamper.html
+++ b/Code/happycamper.html
@@ -141,8 +141,22 @@
         </ul>
         <div class="tab-content chat">
             <div class="group">
+                <div class="filters">
+                    <select>
+                        <option value="all">All users</option>
+                        <option value="234234">Rui Jiang</option>
+                        <option value="345345">Konie</option>
+                    </select>
+                    <select>
+                        <option value="all">All types</option>
+                        <option value="paste">Text</option>
+                        <option value="paste">Paste</option>
+                        <option value="paste">File</option>
+                    </select>
+                    <a href="#">Reset</a>
+                </div>
+                <div class="overhang"></div>
                 <div class="conversation"></div>
-                <div class="sidebar"></div>
                 <div class="clear"></div>
             </div>
             <div class="send">
