- Changed layout of rooms list. - Changed hangout div to do a gray to transparent gradient.

--- a/Code/happycamper.html
+++ b/Code/happycamper.html
@@ -153,7 +153,7 @@
                         <option value="paste">Paste</option>
                         <option value="paste">File</option>
                     </select>
-                    <a href="#">Reset</a>
+                    <a href="#">reset</a>
                 </div>
                 <div class="overhang"></div>
                 <div class="conversation"></div>
