--- a/Code/happycamper.html
+++ b/Code/happycamper.html
@@ -96,6 +96,10 @@
             <div class="clear"></div>
         </div>
     </script>
+
+    <script id="filter-option-template" type="text/x-jquery-tmpl">
+        <option value="${id}" {{if id == "all"}}selected="selected"{{/if}}>${name}</option>
+    </script>
 </head>
 <body>
 
@@ -142,18 +146,9 @@
         <div class="tab-content chat">
             <div class="group">
                 <div class="filters">
-                    <select>
-                        <option value="all">All users</option>
-                        <option value="234234">Rui Jiang</option>
-                        <option value="345345">Konie</option>
-                    </select>
-                    <select>
-                        <option value="all">All types</option>
-                        <option value="paste">Text</option>
-                        <option value="paste">Paste</option>
-                        <option value="paste">File</option>
-                    </select>
-                    <a href="#">reset</a>
+                    <select class="users-filter"></select>
+                    <select class="types-filter"></select>
+                    <a href="#" class="reset-filters">reset</a>
                 </div>
                 <div class="overhang"></div>
                 <div class="conversation"></div>
