--- a/Code/happycamper.html
+++ b/Code/happycamper.html
@@ -6,12 +6,14 @@
     <link rel="stylesheet" href="styles/happycamper.css" />
 
     <script type="text/javascript" src="scripts/plugins/jquery-1.5.1.min.js"></script>
-    <script type="text/javascript" src="scripts/plugins/jlinq.min.js"></script>
+    <script type="text/javascript" src="scripts/plugins/jlinq.js"></script>
     <script type="text/javascript" src="scripts/plugins/json2.js"></script>
     <script type="text/javascript" src="scripts/plugins/jquery.tmpl.min.js"></script>
     <script type="text/javascript" src="scripts/plugins/date.format.js"></script>
     <script type="text/javascript" src="scripts/plugins/md5.js"></script>
     <script type="text/javascript" src="scripts/plugins/jquery.gravatar.js"></script>
+    <script type="text/javascript" src="scripts/plugins/jquery.hintbox.js"></script>
+    <script type="text/javascript" src="scripts/plugins/jquery.delayedsearch.js"></script>
     <script type="text/javascript" src="scripts/happycamper.js"></script>
     <script type="text/javascript" src="scripts/happycamper.util.js"></script>
 
@@ -209,7 +211,18 @@
                 <div class="clear"></div>
             </div>
         </div>
-        <div class="tab-content search" style="display: none;"></div>
+        <div class="tab-content search" style="display: none;">
+            <div class="group">
+                <div class="info input">
+                    <input type="text" class="search-messages" />
+                </div>
+                <div class="overhang"></div>
+                <div class="results"></div>
+                <div class="loading" style="display: none;"></div>
+                <div class="no-results" style="display: none;">No messages found</div>
+                <div class="clear"></div>
+            </div>
+        </div>
     </div>
 </div>
 
