- Added mousewheel functionality to rooms scrollbox.

--- a/Code/happycamper.html
+++ b/Code/happycamper.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="scripts/plugins/date.format.js"></script>
     <script type="text/javascript" src="scripts/plugins/md5.js"></script>
     <script type="text/javascript" src="scripts/plugins/jquery.gravatar.js"></script>
+    <script type="text/javascript" src="scripts/plugins/jquery.mousewheel.min.js"></script>
     <script type="text/javascript" src="scripts/plugins/jquery.hintbox.js"></script>
     <script type="text/javascript" src="scripts/plugins/jquery.delayedsearch.js"></script>
     <script type="text/javascript" src="scripts/happycamper.js"></script>
