- Fixed bug where search was being wired up in 2 different locations. - Added mock for the leave button.

--- a/Code/happycamper.html
+++ b/Code/happycamper.html
@@ -174,6 +174,8 @@
             <li class="files" tab="files">Files</li>
             <li class="search" tab="search">Search</li>
         </ul>
+        <a href="#" class="leave-room">Leave</a>
+        <div class="clear"></div>
         <div class="tab-content chat">
             <div class="group">
                 <div class="info filters">
