- Added notifications icon for action and rooms. - Added desktop notifications feature.

--- a/Code/happycamper.html
+++ b/Code/happycamper.html
@@ -19,7 +19,7 @@
 
     <script id="room-template" type="text/x-jquery-tmpl">
         <div class="room ${state}" roomid="${id}">
-            <span class="icon"></span>
+            <div class="notify">!</div>
             <span class="name">${name}</span>
         </div>
     </script>
