- Started on mockup of options page.

--- a/Code/happycamper.html
+++ b/Code/happycamper.html
@@ -151,8 +151,8 @@
         <div class="header">
             <img src="images/logo.png" />
         </div>
-        <div class="settings">
-            Settings
+        <div class="options">
+            Options
         </div>
         <div class="scroll-up"></div>
         <div class="list">
