--- a/Code/options.html
+++ b/Code/options.html
@@ -6,6 +6,9 @@
 
     <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/happycamper.css" />
+
+    <script type="text/javascript" src="scripts/happycamper.util.js"></script>
+    <script type="text/javascript" src="scripts/options.js"></script>
 </head>
 <body>
     <div class="options-editor">
@@ -22,7 +25,7 @@
                 <fieldset>
                     <div class="label">
                         <label>Account name</label>
-                        <div class="what">(<a href="#">What's this</a>)</div>
+                        <div class="what">(<a href="#">What's this?</a>)</div>
                         <div class="clear"></div>
                     </div>
                     https://<input type="text" class="account-name" />.campfirenow.com
@@ -30,7 +33,7 @@
                 <fieldset>
                     <div class="label">
                         <label>API token</label>
-                        <div class="what">(<a href="#">What's this</a>)</div>
+                        <div class="what">(<a href="#">What's this?</a>)</div>
                         <div class="clear"></div>
                     </div>
                     <input type="text" class="api-token" />
@@ -46,6 +49,10 @@
                 <div class="created">
                     Created by Rui J of <a href="#">roowii.net</a>.<br />
                     Source code at <a href="#">github.com/jookyboi</a>.
+                </div>
+                <div class="social">
+                    <iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fgoogle.com&amp;layout=button_count&amp;show_faces=false&amp;width=80&amp;action=like&amp;font&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:80px; height:21px;" allowTransparency="true"></iframe>
+
                 </div>
                 <div class="clear"></div>
 
