--- a/Code/background.html
+++ b/Code/background.html
@@ -2,6 +2,10 @@
         "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
+    <script type="text/javascript">
+        var happycamper = {};
+    </script>
+
     <script type="text/javascript" src="scripts/plugins/jquery-1.5.1.min.js"></script>
     <script type="text/javascript" src="scripts/plugins/jlinq.js"></script>
     <script type="text/javascript" src="scripts/plugins/date.format.js"></script>
