--- a/Code/happycamper.html
+++ b/Code/happycamper.html
@@ -5,6 +5,10 @@
     <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/happycamper.css" />
 
+    <script type="text/javascript">
+        var happycamper = {};
+    </script>
+
     <script type="text/javascript" src="scripts/plugins/jquery-1.5.1.min.js"></script>
     <script type="text/javascript" src="scripts/plugins/jlinq.js"></script>
     <script type="text/javascript" src="scripts/plugins/jquery.tmpl.min.js"></script>
