- Added code to load settings.

--- a/Code/options.html
+++ b/Code/options.html
@@ -48,7 +48,7 @@
                         <div class="what">(<a href="#" class="account">What's this?</a>)</div>
                         <div class="clear"></div>
                     </div>
-                    https://<input type="text" class="account-name" />.campfirenow.com
+                    https://<input type="text" name="account-name" />.campfirenow.com
                 </fieldset>
                 <fieldset>
                     <div class="label">
@@ -56,7 +56,7 @@
                         <div class="what">(<a href="#" class="token">What's this?</a>)</div>
                         <div class="clear"></div>
                     </div>
-                    <input type="text" class="api-token" />
+                    <input type="text" name="api-token" />
                 </fieldset>
             </div>
 
