- Added saving of options. - Added error checking to account input.

--- a/Code/options.html
+++ b/Code/options.html
@@ -16,6 +16,7 @@
     <script type="text/javascript" src="scripts/plugins/jquery.tmpl.min.js"></script>
     <script type="text/javascript" src="scripts/happycamper.util.js"></script>
     <script type="text/javascript" src="scripts/plugins/jquery.qtip.min.js"></script>
+    <script type="text/javascript" src="scripts/camper.js"></script>
     <script type="text/javascript" src="scripts/options.js"></script>
 
     <script id="what-account-name-template" type="text/x-jquery-tmpl">
@@ -42,6 +43,7 @@
             <button class="white save-options">Save</button>
             <div class="clear"></div>
             <div class="content" id="account">
+                <div class="error" style="display: none;">Invalid account name or API token. Please try again.</div>
                 <fieldset>
                     <div class="label">
                         <label>Account name</label>
@@ -102,8 +104,8 @@
 
             <div class="footer">
                 <div class="created">
-                    Created by Rui J of <a href="#">roowii.net</a>.<br />
-                    Source code at <a href="#">github.com/jookyboi</a>.
+                    Created by Rui J of <a href="http://roowii.net" target="_blank">roowii.net</a>.<br />
+                    Source code at <a href="https://github.com/jookyboi" target="_blank">github.com/jookyboi</a>.
                 </div>
                 <div class="social">
                     <iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fgoogle.com&amp;layout=button_count&amp;show_faces=false&amp;width=80&amp;action=like&amp;font&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:80px; height:21px;" allowTransparency="true"></iframe>
