- Added auto-open options page on load. - Wired options link. - Added check for no-account info. - Added check for no rooms.

--- a/Code/happycamper.html
+++ b/Code/happycamper.html
@@ -155,9 +155,7 @@
         <div class="header">
             <img src="images/logo.png" />
         </div>
-        <div class="options">
-            Options
-        </div>
+        <div class="options">Options</div>
         <div class="scroll-up"></div>
         <div class="list">
             <div class="scrollbox"></div>
